# jetson-12-15

./: .gitignore  AI_CAPABILITIES_ANALYSIS.md  HARDWARE_OPTIMIZATION_PLAN.md  README.md  index.html  rssaem.service  rssaem_autostart.sh
config/: robot-full.service  robot.service
config/nginx/: rssaem.conf
docs/: WIFI_HOTSPOT_SETUP.md  index.html
docs/apriltag/: README.md  generate_tags.py  printable_tags.html
scripts/: create_tensorrt_engine.py  enable_ap_mode.sh  enable_client_mode.sh  full_setup.sh  install.sh  setup_webserver.sh  setup_wifi_ap.sh  start_robot.sh  start_robot_full.sh  stop_robot.sh  sync_www.sh
src/keti/: README.md  docker-compose.yml
src/keti/robot_ai/: CMakeLists.txt  package.xml
src/keti/robot_ai/launch/: camera.launch.py  color_follow.launch.py  person_follow.launch.py
src/keti/robot_ai/scripts/: body_tracker.py  camera_ai_pipeline.py  gesture_detector.py  jetson_camera.py  jetson_camera_hw.py  jetson_camera_zero_copy.py  multi_ai_engine.py  person_detector.py  person_follower.py  setup_models.py  yolo_detector.py
src/keti/robot_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/keti/robot_bringup/launch/: camera.launch.py  robot.launch.py  robot_state_publisher.launch.py  rssaem.launch.py  rssaem_state_publisher.launch.py  rviz2.launch.py
src/keti/robot_bringup/param/: rssaem.yaml
src/keti/robot_bringup/param/humble/: rssaem.yaml
src/keti/robot_bringup/script/: 99-robot-cdc.rules  create_udev_rules
src/keti/robot_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/keti/robot_description/urdf/: rssaem.urdf  rssaem.xacro
src/keti/robot_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/keti/robot_driver/include/robot_driver/: control_table.hpp  diff_drive_controller.hpp  dynamixel_sdk_wrapper.hpp  odometry.hpp  robot.hpp  rssaem.hpp  twist_publisher.hpp  twist_subscriber.hpp
src/keti/robot_driver/include/robot_driver/devices/: devices.hpp  motor_power.hpp  reset.hpp  sound.hpp
src/keti/robot_driver/include/robot_driver/sensors/: battery_state.hpp  imu.hpp  joint_state.hpp  sensor_state.hpp  sensors.hpp
src/keti/robot_driver/param/: rssaem.yaml
src/keti/robot_driver/src/: diff_drive_controller.cpp  dynamixel_sdk_wrapper.cpp  node_main.cpp  odometry.cpp  robot.cpp
src/keti/robot_driver/src/devices/: motor_power.cpp  reset.cpp  sound.cpp
src/keti/robot_driver/src/sensors/: battery_state.cpp  imu.cpp  joint_state.cpp  sensor_state.cpp
src/keti/robot_example/: package.xml  setup.cfg  setup.py
src/keti/robot_example/robot_example/: __init__.py  move_forward.py  obstacle_detection.py  patrol.py  turn.py
src/keti/robot_meta/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/keti/robot_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/keti/robot_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/keti/robot_navigation/launch/: navigation2.launch.py
src/keti/robot_navigation/param/humble/: rssaem.yaml
src/keti/robot_slam/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/keti/robot_slam/config/: rssaem_lds_2d.lua
src/keti/robot_slam/launch/: cartographer.launch.py  occupancy_grid.launch.py
src/keti/robot_teleop/: CHANGELOG.rst  package.xml  setup.py
src/keti/robot_teleop/robot_teleop/script/: teleop_keyboard.py
src/keti/robot_web/: CMakeLists.txt  package.xml
src/keti/robot_web/launch/: nav_web.launch.py  slam_web.launch.py  web_interface.launch.py
src/keti/robot_web/scripts/: slam_controller.py
src/keti/robot_web/www/: ai.html  index.html
src/ldlidar_stl_ros2/src/: demo.cpp
src/rssaem/: docker-compose.yml
src/rssaem/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch.py
src/rssaem/rf2o_laser_odometry/src/: CLaserOdometry2D.cpp  CLaserOdometry2DNode.cpp
src/rssaem/rssaem/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/rssaem/rssaem_ai/: CMakeLists.txt  package.xml
src/rssaem/rssaem_ai/config/: detector_params.yaml
src/rssaem/rssaem_ai/launch/: camera.launch.py  color_follow.launch.py  person_follow.launch.py
src/rssaem/rssaem_ai/scripts/: body_tracker.py  gesture_detector.py  jetson_camera.py  person_detector.py  person_follower.py  setup_models.py  yolo_detector.py
src/rssaem/rssaem_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/rssaem/rssaem_bringup/launch/: rssaem.launch.py  rssaem_state_publisher.launch.py  rviz2.launch.py
src/rssaem/rssaem_bringup/param/: rssaem.yaml
src/rssaem/rssaem_bringup/param/humble/: rssaem.yaml
src/rssaem/rssaem_bringup/script/: 99-rssaem-cdc.rules
src/rssaem/rssaem_cartographer/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/rssaem/rssaem_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
src/rssaem/rssaem_description/: CMakeLists.txt  package.xml
src/rssaem/rssaem_description/urdf/: rssaem.urdf  rssaem.xacro
src/rssaem/rssaem_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/rssaem/rssaem_navigation2/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/rssaem/rssaem_navigation2/launch/: navigation2.launch.py
src/rssaem/rssaem_navigation2/param/: rssaem.yaml
src/rssaem/rssaem_node/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/rssaem/rssaem_node/include/rssaem_node/: control_table.hpp  diff_drive_controller.hpp  dynamixel_sdk_wrapper.hpp  odometry.hpp  rssaem.hpp  twist_publisher.hpp  twist_subscriber.hpp
src/rssaem/rssaem_node/include/rssaem_node/devices/: devices.hpp  motor_power.hpp  reset.hpp  sound.hpp
src/rssaem/rssaem_node/param/: rssaem.yaml
src/rssaem/rssaem_node/src/: diff_drive_controller.cpp  node_main.cpp  odometry.cpp  rssaem.cpp
src/rssaem/rssaem_node/src/devices/: reset.cpp  sound.cpp
src/rssaem/rssaem_node/src/sensors/: battery_state.cpp  imu.cpp
src/rssaem/rssaem_teleop/: package.xml  setup.cfg  setup.py
src/rssaem/rssaem_teleop/rssaem_teleop/script/: teleop_keyboard.py
src/rssaem/rssaem_web/: CMakeLists.txt  package.xml
src/rssaem/rssaem_web/launch/: nav_web.launch.py  slam_web.launch.py  web_interface.launch.py
src/rssaem/rssaem_web/scripts/: slam_controller.py
src/rssaem/rssaem_web/www/: ai.html  index.html
(+5 files in other folders)
