<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>2.3.3</version>
  <description>
    ROS 2 launch scripts for starting the robot
  </description>
  <maintainer email="keti@keti.re.kr">KETI</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://keti.co.kr</url>
  <author email="kate.brighteyes@gmail.com">Kate</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>robot_driver</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
