<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_driver</name>
  <version>2.3.3</version>
  <description>
    robot driver node that include diff drive controller, odometry and tf node
  </description>
  <maintainer email="jetsonai@jetsonai.co.kr">Jetsonai</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://jetsonai.co.kr</url>
  <author email="kate.brighteyes@gmail.com">Kate</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>dynamixel_sdk</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>robot_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
