<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_example</name>
  <version>1.0.0</version>
  <description>Example nodes for KETI Robot (patrol, obstacle detection, movement control)</description>

  <maintainer email="keti@keti.re.kr">KETI</maintainer>
  <license>Apache-2.0</license>

  <url type="repository">https://github.com/hwkim3330/jetson-12-15</url>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
