<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_slam</name>
  <version>2.3.4</version>
  <description>
    ROS 2 launch scripts for cartographer
  </description>
  <maintainer email="keti@keti.re.kr">KETI</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://keti.co.kr</url>
  <author email="kate.brighteyes@gmail.com">Kate</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
