<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_teleop</name>
  <version>2.3.3</version>
  <description>
    Teleoperation node using keyboard for robot.
  </description>
  <maintainer email="keti@keti.re.kr">KETI</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://keti.co.kr</url>
  <author email="kate.brighteyes@gmail.com">Kate</author>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
