<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rssaem</name>
  <version>2.0.0</version>
  <description>
    ROS 2 packages for rssaem
  </description>
  <maintainer email="jetsonai@jetsonai.co.kr">Jetsonai</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://jetsonai.co.kr</url>
  <author email="kate.brighteyes@gmail.com">Kate</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>
  <exec_depend>rssaem_bringup</exec_depend>
  <exec_depend>rssaem_cartographer</exec_depend>
  <exec_depend>rssaem_description</exec_depend>
  <exec_depend>rssaem_example</exec_depend>
  <exec_depend>rssaem_navigation2</exec_depend>
  <exec_depend>rssaem_node</exec_depend>
  <exec_depend>rssaem_teleop</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
