<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rssaem_web</name>
  <version>1.0.0</version>
  <description>RSAEM Robot Web Interface - Tesla Style</description>
  <maintainer email="hwkim3330@users.noreply.github.com">hwkim3330</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>rssaem_bringup</exec_depend>
  <exec_depend>rssaem_ai</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
